--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-spring/web": "^9.6.1",
+    "@react-three/fiber": "^8.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -13,11 +15,17 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/three": "^0.147.1",
     "framer-motion": "^6.5.1",
+    "konva": "^8.3.14",
+    "lodash": "^4.17.21",
+    "midi-sounds-react": "^1.2.54",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-konva": "^18.2.3",
     "react-scripts": "5.0.1",
+    "three": "^0.148.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
