visualize midi file

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.147.1",
     "framer-motion": "^6.5.1",
+    "html-midi-player": "^1.5.0",
     "konva": "^8.3.14",
     "lodash": "^4.17.21",
     "midi-sounds-react": "^1.2.54",
@@ -26,6 +27,7 @@
     "react-konva": "^18.2.3",
     "react-scripts": "5.0.1",
     "three": "^0.148.0",
+    "tone": "^14.7.77",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
